errors/errors.txt
  File "C:\Python27\lib\site-packages\MySQLdb\__init__.py", line 81, in Connect
    return Connection(*args, **kwargs)
  File "C:\Python27\lib\site-packages\MySQLdb\connections.py", line 206, in __init__
    super(Connection, self).__init__(*args, **kwargs2)
sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'root'@'localhost' (using password: YES)")


File "C:\Python27\lib\site-packages\MySQLdb\connections.py", line 206, in __init__
    super(Connection, self).__init__(*args, **kwargs2)
sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'notroot'@'localhost' (using password: YES)")

File "C:\Python27\lib\site-packages\MySQLdb\connections.py", line 206, in __init__
    super(Connection, self).__init__(*args, **kwargs2)
sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (2003, "Can't connect to MySQL server on '127.0.0.1' (10061)")

 File "C:\Users\Zach\Desktop\dojoAssignments\Python\flask_mysql\errors\mysqlconnection.py", line 9, in __init__
    'database': notdb, # we got db as an argument
NameError: global name 'notdb' is not defined

  File "C:\Users\Zach\Desktop\dojoAssignments\Python\flask_mysql\errors\mysqlconnection.py", line 11
    'user': 'root',
          ^
SyntaxError: invalid syntax

  File "C:\Users\Zach\Desktop\dojoAssignments\Python\flask_mysql\errors\mysqlconnection.py", line 10
    'extrainf':dose this,
                       ^
SyntaxError: invalid syntax

